--- a/founders.html
+++ b/founders.html
@@ -34,7 +34,11 @@
       <p><i>Through this project, we not only learned the fundamentals of web development — including layout design, 
         responsive structure, and coding — but also explored how artificial intelligence can enhance user experience.
          One of the key features of this project is a small AI-powered chatbot, trained to assist users and provide relevant information efficiently.</i></p>
-      
+         
+         <img src="images/team.jpg" alt="My Photo" width="300">
+          <img src="images/team2.jpg" alt="My Photo" width="300">
+<img src="images/team3.jpg" alt="My Photo" width="300">
+
   </header>
 
 
