--- a/home.html
+++ b/home.html
@@ -3,5 +3,6 @@ institute-website/
 ├── index.html          ← Home Page
 ├── gallery.html        ← Gallery Page
 ├── admission.html      ← Admission Form Page
+├── image.html           ← image Page
 └── founders.html      ← founders Page
 
