--- a/home.html
+++ b/home.html
@@ -4,5 +4,8 @@ institute-website/
 ├── gallery.html        ← Gallery Page
 ├── admission.html      ← Admission Form Page
 ├── image.html           ← image Page
+│    ├── team.jpg
+│    ├── team2.png
+│    └── team3.jpg
 └── founders.html      ← founders Page
 
