--- a/home.html
+++ b/home.html
@@ -3,9 +3,10 @@ institute-website/
 ├── index.html          ← Home Page
 ├── gallery.html        ← Gallery Page
 ├── admission.html      ← Admission Form Page
+├── founders.html      ← founders Page
 ├── image.html           ← image Page
 │    ├── team.jpg
 │    ├── team2.png
 │    └── team3.jpg
-└── founders.html      ← founders Page
+                
 
