Added group photos to founders page

--- a/founders.html
+++ b/founders.html
@@ -38,6 +38,17 @@
          <img src="images/team.jpg" alt="My Photo" width="300">
           <img src="images/team2.jpg" alt="My Photo" width="300">
 <img src="images/team3.jpg" alt="My Photo" width="300">
+<section class="founders">
+  <h2>Our Founders</h2>
+  <p>Here are the group photos of our team.</p>
+
+  <div class="group-photos">
+    <img src="images/team.jpg" alt="My Photo" width="300">
+          <img src="images/team2.jpg" alt="My Photo" width="300">
+<img src="images/team3.jpg" alt="My Photo" width="300">
+  </div>
+</section>
+
 
   </header>
 
