Added group photos to founders page

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@ institute-website/
 ├── gallery.html        ← Gallery Page
 ├── admission.html      ← Admission Form Page
 ├── founders.html      ← founders Page
-├── image.html           ← image Page
+├── image/          ← image Page
 │    ├── team.jpg
 │    ├── team2.png
 │    └── team3.jpg
