--- a/home.html
+++ b/home.html
@@ -4,7 +4,8 @@ institute-website/
 ├── gallery.html        ← Gallery Page
 ├── admission.html      ← Admission Form Page
 ├── founders.html      ← founders Page
-├── image/          ← image Page
+├── home.html        ← home Page
+├── image.html/          ← image Page
 │    ├── team.jpg
 │    ├── team2.png
 │    └── team3.jpg
