Added image file

--- a/home.html
+++ b/home.html
@@ -5,9 +5,9 @@ institute-website/
 ├── admission.html      ← Admission Form Page
 ├── founders.html      ← founders Page
 ├── home.html        ← home Page
-├── image.html/          ← image Page
+├── images/          ← image Page
 │    ├── team.jpg
-│    ├── team2.png
+│    ├── team2.jng
 │    └── team3.jpg
                 
 
